----------------------------
wxWindows 2.5/2.6 Change Log
----------------------------

INCOMPATIBLE CHANGES SINCE 2.4.x
================================

OTHER CHANGES
=============

2.5.0
-----

All:

- added wxCLOSE style for dialogs and frames
- added wxDateSpan::operator==() and !=() (Lukasz Michalski)
- use true/false throughout the library instead of TRUE/FALSE
- wxStopWatch::Start() resumes the stop watch if paused, as per the docs
- added wxDirTraverser::OnOpenError() to customize the error handling
- added wxArray::SetCount()
- wxFile, wxFFile, wxTextFile and wxTempFile now all use UTF-8 encoding
  by default in Unicode mode
- bug in wxDateTime with timezones on systems with tm_gmtoff in struct tm fixed

wxBase:

- added Watcom makefiles

All GUI ports:

- added wxSplitterWindow handler to XRC
- added proportion to wxFlexGridSizer::AddGrowableRow/Col (Maxim Babitski)
- added wxFlexGridSizer::SetFlexibleDirection() (Szczepan Holyszewski)
- implemented GetEditControl for wxGenericTreeCtrl (Peter Stieber)
- improved contrib/utils/convertrc parsing (David J. Cooke)
- fixed handling of URLs and filenames in wxFileSystem
- implemented alignment for wxGrid bool editor and renderer
- support wxListCtrl columns alignment for all platforms and not just MSW
- added wxToolBar Add/InsertTool(tool) (Janusz Piwowarski)
- WXR resources can now be used in Unicode builds
- changed to type-safe wxSizerItemList for wxSizer child items
    Deprecated:
        wxSizer::Remove( wxWindow* )
            - it does not function as Remove would usually be expected to
              and destroy the window, use Detach instead
        wxSizer::GetOption(),
        wxSizer::SetOption()
            - wxSizer 'option' parameter was renamed 'proportion' to better
              reflect its action, use Get/SetProportion instead
        wxKeyEvent::KeyCode()
            - use GetKeyCode instead
        wxList:: Number, First, Last, Nth